--- a/source/mainStyle.css
+++ b/source/mainStyle.css
@@ -122,7 +122,7 @@ body {
 
 #clientes {
     height: 100%;
-    background-image: url('http://imagizer.imageshack.us/a/img912/6391/QG2QGo.jpg');
+    background-image: url('http://imagizer.imageshack.us/a/img633/8409/E7BmF6.jpg');
     background-repeat: no-repeat;
     background-size: 100%;
     background-position-y: -100px;
@@ -249,6 +249,19 @@ body {
     margin: auto;
 }
 
+.contenidoServicios {
+    width: 950px;
+    height: 380px;
+    background-color: #bbbcbc;
+    opacity: 0.8;
+    position: absolute;
+    top:-150px;
+    left:0;
+    right:0;
+    bottom:0;
+    margin: auto;
+}
+
 #ubicacionMapa {
     position: absolute;
     top:-150px;
@@ -275,7 +288,20 @@ body {
     opacity: 1;
 }
 
+.serviciosImagenes {
+    width: 60%;
+    height: 95%;
+    opacity: 1;
+}
+
 .contenidoHabitaciones div {
+    display: inline;
+    top: 0;
+    left: 0;
+    float: left;
+}
+
+.contenidoServicios div {
     display: inline;
     top: 0;
     left: 0;
@@ -288,12 +314,38 @@ body {
     padding: 0px;
 }
 
-.habitacionesDescripcion p {
+.serviciosDescripcion {
+    width: 30%;
+    height: 100%;
+    padding: 20px 0px 0px 0px;
+}
+
+.habitacionesDescripcion pre {
+    font-size: 12px;
+    padding: 0;
+    margin: 0px 0px 0px 20px;
+    border: 0;
     overflow: scroll;
+    background-size: contain;
+    font-family:  "Calibri", sans-serif;
+    background-color: transparent;
+}
+
+.serviciosDescripcion pre {
+    font-size: 12px;
+    background-color: transparent;
+    padding: 0;
+    margin: 0px 0px 0px 20px;
+    border: 0;
+    overflow: scroll;
+    height: 100%;
+    width: 100%;
+    font-family:  "Calibri", sans-serif;
+    border-spacing: 0;
 }
 
 .habitacionesMenu ul {
-    padding: 20px 20px 0px 0px;
+    padding: 20px 0px 0px 0px;
     height: inherit;
     width: 100%;
     margin: 0;
@@ -327,15 +379,29 @@ body {
     width: 100%;
     display: none;
     padding-top: 20px;
-    padding-left: 20px;
+    padding-left: 5px;
 }
 
 .active-image {
     display: inline-block;
 }
 
+.servicio-image {
+    height: 100%;
+    width: 100%;
+    display: none;
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
+.servicio-active-image {
+    display: inline-block;
+}
+
 .habitacionesDescripcion {
-    width: 200%;
+    padding-top: 20px;
+    width: 22%;
+    background-size: auto;
 }
 
 .fields {
