--- a/source/mainStyle.css
+++ b/source/mainStyle.css
@@ -320,28 +320,19 @@ body {
     padding: 20px 0px 0px 0px;
 }
 
-.habitacionesDescripcion pre {
+.habitacionesDescripcion p {
     font-size: 12px;
     padding: 0;
     margin: 0px 0px 0px 20px;
     border: 0;
-    overflow: scroll;
-    background-size: contain;
-    font-family:  "Calibri", sans-serif;
-    background-color: transparent;
 }
 
-.serviciosDescripcion pre {
+.serviciosDescripcion p {
     font-size: 12px;
     background-color: transparent;
     padding: 0;
     margin: 0px 0px 0px 20px;
     border: 0;
-    overflow: scroll;
-    height: 100%;
-    width: 100%;
-    font-family:  "Calibri", sans-serif;
-    border-spacing: 0;
 }
 
 .habitacionesMenu ul {
