--- a/source/mainStyle.css
+++ b/source/mainStyle.css
@@ -353,6 +353,27 @@ body {
     width: inherit;
 }
 
+.contenidoClientes {
+    width: 550px;
+    height: 380px;
+    background-color: #bbbcbc;
+    opacity: 0.8;
+    position: absolute;
+    top:-150px;
+    left:0;
+    right:0;
+    bottom:0;
+    margin: auto;
+    overflow: auto;
+}
+
+.contenidoClientes p {
+    font-size: 16px;
+    padding: 0;
+    margin: 20px 0px 0px 20px;
+    border: 0;
+}
+
 .last {
     border-top: solid 1px #381616;
 }
