--- a/source/bootstrap.css
+++ b/source/bootstrap.css
@@ -1517,8 +1517,8 @@ textarea.input-lg, select[multiple].input-lg {
 }
 .btn-primary {
     color: #fff;
-    background-color: #428bca;
-    border-color: #357ebd;
+    background-color: #3b3b3b;
+    border-color: #3b3b3b;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary {
     color: #fff;
